	PR c++/40619 	* cp-tree.h (struct lang_decl_parm): New. 	(struct lang_decl): Add it. 	(LANG_DECL_PARM_CHECK): New. 	(DECL_PARM_INDEX): New. 	* decl2.c (parm_index): Remove. 	* lex.c (retrofit_lang_decl): Handle parms. 	(cxx_dup_lang_specific_decl): Likewise. 	* mangle.c (write_expression): Adjust. 	* tree.c (cp_tree_equal): Adjust. 	(decl_linkage): Only check DECL_COMDAT for functions and variables. 	* parser.c (cp_parser_parameter_declaration_list): Set 	DECL_PARM_INDEX. 	* pt.c (iterative_hash_template_arg): Hash it.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@149223 138bc75d-0d04-0410-961f-82ee72b054a4